--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <nav>
         <ul>
             <li><a href="">Home</a></li>
-            <li><a href="aboutus.html">About Us</a>
+            <li><a href="aboutus.html">Who we are</a>
             <li><a href="photos.html">Photos</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="services.html">What we do</a></li>
             <li><a href="health.html">Health Advice</a></li>
 
         </ul>
