--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <b>Tel/Fax</b>
         <p>(023) 8846354 / (023) 8841189</p>
         <b> E-mail </b>
-        <p>Learnandfly@gmail.com</p>
+        <p>Learnandfly77@gmail.com</p>
         <figure>
             <img src="time.jpg" alt="clipart of a clock" title="time logo">
         </figure>
