added Monday to Sunday, and learn&fly@gmail.com

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     </main>
     <article>
         <h1>Opening Hours</h1>
-        <b>Monday to Saturday</b>
+        <b>Monday to Sunday</b>
         <p>9am - 7pm</p>
         <b>Tel/Fax</b>
         <p>(023) 8846354 / (023) 8841189</p>
         <b> E-mail </b>
-        <p>Only1_Obago_OfAlimosho_Land@gmail.com</p>
+        <p>Learn&Fly07@gmail.com</p>
         <figure>
             <img src="time.jpg" alt="clipart of a clock" title="time logo">
         </figure>
